<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".MainActivity"
    android:background="@drawable/backgournd1">

    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="40dp"
        android:textStyle="bold|italic"
        android:theme="@style/TextAppearance.AppCompat.Title.Inverse"/>



    <ImageButton
        android:id="@+id/btn_fb"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:src="@drawable/fblogo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="43dp"
        android:scaleType="fitXY"/>

    <ImageButton
        android:id="@+id/btn_twitter"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:src="@drawable/twitter_logo"
        android:layout_below="@+id/btn_ForgetPass"
        android:layout_toLeftOf="@+id/btn_fb"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"/>

    <Button
        android:id="@+id/btn_ForgetPass"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:text="Forget Password"
        android:textSize="10dp"
        android:background="@drawable/mybutton"
        android:layout_marginLeft="7dp"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/btn_fb"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:text="@string/action_register"
        android:textSize="12dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="7dp"
        android:layout_toLeftOf="@+id/btn_ForgetPass"
        android:layout_alignBottom="@+id/btn_ForgetPass"
        android:background="@drawable/mybutton" />

    <Button
        android:id="@+id/btn_cancel"
        android:text="@string/cancel"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_toLeftOf="@+id/btn_signup"
        android:layout_alignBottom="@+id/btn_signup"
        android:layout_marginLeft="7dp"
        android:textSize="12dp"
        android:background="@drawable/mybutton"
        android:onClick="cancel"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_toLeftOf="@+id/btn_cancel"
        android:layout_alignBottom="@+id/btn_cancel"
        android:layout_marginLeft="7dp"
        android:textSize="12dp"
        android:background="@drawable/mybutton"
        android:onClick="logIn" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:layout_above="@+id/btn_login"
        android:layout_gravity="center"
        android:layout_alignLeft="@+id/btn_login"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/username"
        android:hint="@string/usernameHint"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_above="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_border"/>

</RelativeLayout>